# univ-csv-stats

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.txt  bench-all.sh  bench-mini-serial.sh  bench-serial.sh  justfile
bindings/nodejs/: Cargo.toml  cli-native.mjs  cli.js  cli.mjs  index.d.ts  index.js  index.spec.js  package.json  pnpm-lock.yaml
bindings/nodejs-wasm/: Cargo.toml  package.json  pnpm-lock.yaml
bindings/nodejs-wasm/nodejs/: calculate_stats_from_csv.test.mjs  cli.mjs
bindings/nodejs-wasm/src/: lib.rs
bindings/nodejs/.github/DISABLED-workflows/: CI.yml
bindings/nodejs/npm/darwin-arm64/: README.md  package.json
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  build.rs  pyproject.toml  pyvenv.cfg
bindings/python/python/: cli-native.py  cli.py
bindings/python/python/tests/: test_stats.py
bindings/python/python/univ_csv_stats_python/: __init__.py
bindings/python/src/: lib.rs
core/: Cargo.toml
core/examples/: cli.rs
core/src/: lib.rs
test_data/: test.csv
