[package]
name = "univ-csv-stats"
version = "0.1.0"
edition = "2024"

[dependencies]


[workspace]
members = ["core", "bindings/nodejs", "bindings/nodejs-wasm", "bindings/python"]

[workspace.dependencies]
# Shared dependencies across workspace
anyhow = "1.0"
clap = "4.0"
pyo3 = { version = "0.25.1", features = ["default", "extension-module"] }
thiserror = "1.0"

[profile.release]
lto = true
strip = "symbols"

[profile.release.package."univ-csv-stats-nodejs-wasm"]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
