[package]
edition = "2024"
name = "univ-csv-stats-nodejs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
univ-csv-stats-core = { path = "../../core" }

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"

[build-dependencies]
napi-build = "2.2.2"
